(1) avoid overflow of result text (2) add a blinking '>' sign when press AC/Reset (3) add begining steps to adding another sign like tan()

--- a/side_notes/calculator12/cal.css
+++ b/side_notes/calculator12/cal.css
@@ -97,10 +97,15 @@
 
     }
 
+    .result_space {
+        justify-content: flex-end;
+    }
+
     .writing_space_input, .result_space_output {
         overflow-x: hidden;
         /*text-overflow: ellipsis;*/
     }
+
 
     .overflowDotsBlink {
         animation: blink 1s linear infinite alternate; 
